<resources>
    <string name="app_name">visible-guitar</string>
    <string name="test">test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="begin">Начать</string>
    <string name="melodies">Мелодии</string>
    <string name="chords">Аккорды</string>
    <string name="parameters">Параметры</string>
    <string name="profile">Профиль</string>
    <string name="main">Главная</string>
    <string name="instrument">Требуется %s</string>
    <string name="title">Title</string>
    <string name="info">Info</string>
    <string name="not_connection">
        Произошла ошибка. Повторите попытку.</string>
    <string name="download">Загрузка…</string>
    <string name="fps">FPS: %s</string>
    <string name="back">back</string>
    <string name="loginSummary">Войдите в свою учётную запись</string>
    <string name="signUpSummary">Для начала создайте учётную запись</string>
    <string name="melodiesCount">Изученных мелодий: %s</string>
    <string name="chordsCount">Изученных аккордов: %s</string>
    <string name="chordOnCamera">Аккорд: %s</string>
    <string name="currentChordOnCamera">Текущий аккорд: %s %s / %s</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="signUp">Создать учётную запись</string>
    <string name="endLearning">Закончить</string>
    <string name="app">Приложение</string>
    <string name="greeting">Начти играть на музыкальном инструменте.</string>

    <string name="theme">Тёмная тема</string>
    <string name="NotHaveAccount">Я новичок</string>
    <string name="haveAccount">Я имею учетную запись</string>

    <string-array name="greetings">
        <item>Добро пожаловать!</item>
        <item>Научитесь играть на музыкальном инструменте.</item>
        <item>Используйте камеру смартфона и технологии компьютерного зрения для обучения.</item>
        <item>Реализуйте свою мечту.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="melodies_text">Мелодии</string>
    <string name="title_activity_melody_camera">MelodyCameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nextChord">Следующий аккорд</string>
    <string name="prevChord">Предыдущий аккорд</string>

</resources>