<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signUp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAuth"
    tools:context=".ui.fragment.auth.SignUpFragment"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:src="@drawable/sign_up_top"
        android:scaleType="centerCrop"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="25sp"
        android:src="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardCorners"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="50dp"
            app:cardBackgroundColor="@color/whiteBlack">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signUpSummary"
                    android:gravity="center"
                    android:padding="10sp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="18sp"
                    android:textColor="@color/textColor"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:maxLines="1"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:background="@color/whiteBlack"
                        android:autofillHints="emailAddress"
                        android:hint="@string/username"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:background="@color/whiteBlack"
                        android:autofillHints="emailAddress"
                        android:hint="@string/email"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/whiteBlack"
                        android:layout_margin="5sp"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:indeterminate="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:cornerRadius="50dp"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/signUp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</FrameLayout>